--- a/Step02_Nodejs_logs_with_api_extension_and_save_in_s3/package.json
+++ b/Step02_Nodejs_logs_with_api_extension_and_save_in_s3/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nodejssimpleextension",
+  "name": "step02_nodejs_logs_with_api_extension_and_save_in_s3",
   "version": "0.1.0",
   "bin": {
-    "nodejs simple extension": "bin/nodejs simple extension.js"
+    "step02_nodejs_logs_with_api_extension_and_save_in_s3": "bin/step02_nodejs_logs_with_api_extension_and_save_in_s3.js"
   },
   "scripts": {
     "build": "tsc",
@@ -21,9 +21,12 @@
     "typescript": "~3.9.7"
   },
   "dependencies": {
+    "@aws-cdk/aws-iam": "^1.87.1",
     "@aws-cdk/aws-lambda": "^1.87.1",
+    "@aws-cdk/aws-s3": "^1.87.1",
     "@aws-cdk/core": "1.87.1",
     "@types/aws-lambda": "^8.10.71",
+    "aws-lambda": "^1.0.6",
     "source-map-support": "^0.5.16"
   }
 }
