--- a/Step01_Simple_extension/package.json
+++ b/Step01_Simple_extension/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nodejssimpleextension",
+  "name": "step01_simple_extension",
   "version": "0.1.0",
   "bin": {
-    "nodejs simple extension": "bin/nodejs simple extension.js"
+    "step01_simple_extension": "bin/step01_simple_extension.js"
   },
   "scripts": {
     "build": "tsc",
@@ -11,19 +11,19 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.87.1",
+    "@aws-cdk/assert": "1.89.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
-    "aws-cdk": "1.87.1",
+    "aws-cdk": "1.89.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda": "^1.87.1",
-    "@aws-cdk/core": "1.87.1",
-    "@types/aws-lambda": "^8.10.71",
+    "@aws-cdk/aws-lambda": "^1.89.0",
+    "@aws-cdk/core": "1.89.0",
+    "@types/aws-lambda": "^8.10.72",
     "source-map-support": "^0.5.16"
   }
 }
